fixed expand collapse in the noticias and disciplinas pages

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ body #content .entry-title{
   font-size:12px;
 }
 #content .post time {
-  margin-left:3px;
+/*  margin-left:3px;*/
 }
 #content article{
   background-color: none;
